--- a/index.html
+++ b/index.html
@@ -159,6 +159,18 @@
     </section>
     <!-- Awards -->
 
+    <!-- Technical Skills -->
+    <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="awards">
+        <div class="container px-5">
+            <header>
+                <h2 id="awards-subtitle"><i class="bi bi-award-fill"></i>AWARDS </h2>
+            </header>
+            <div class="main-body" id="awards-md"></div>
+
+        </div>
+    </section>
+    <!-- Technical Skills -->
+
 
     <!-- Footer-->
     <footer class="bg-bottom text-center py-5">
