--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
     <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="publications">
         <div class="container px-5">
             <header>
-                <h2 id="publications-subtitle"><i class="bi bi-file-text-fill"></i>&nbsp;PUBLICATIONS</h2>
+                <h2 id="publications-subtitle"><i class="bi bi-file-text-fill"></i>&nbsp;TECHNICAL SKILLS</h2>
             </header>
-            <div class="main-body" id="publications-md"></div>
+            <div class="main-body" id="technical skills-md"></div>
 
         </div>
     </section>
@@ -160,12 +160,12 @@
     <!-- Awards -->
 
     <!-- Technical Skills -->
-    <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="awards">
+    <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="publications">
         <div class="container px-5">
             <header>
-                <h2 id="awards-subtitle"><i class="bi bi-award-fill"></i>AWARDS </h2>
+                <h2 id="publications-subtitle"><i class="bi bi-file-text-fill"></i>&nbsp;PUBLICATIONS</h2>
             </header>
-            <div class="main-body" id="awards-md"></div>
+            <div class="main-body" id="publications-md"></div>
 
         </div>
     </section>
