--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@
                     <li class="nav-item">
                         <a class="nav-link me-lg-3" href="#awards">AWARDS</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link me-lg-3" href="#awards">TECHNICAL SKILLS</a>
+                    </li>
 
                 </ul>
             </div>
@@ -139,9 +142,9 @@
     <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="publications">
         <div class="container px-5">
             <header>
-                <h2 id="publications-subtitle"><i class="bi bi-file-text-fill"></i>&nbsp;TECHNICAL SKILLS</h2>
+                <h2 id="publications-subtitle"><i class="bi bi-file-text-fill"></i>&nbsp;PUBLICATIONS</h2>
             </header>
-            <div class="main-body" id="technical skills-md"></div>
+            <div class="main-body" id="publications-md"></div>
 
         </div>
     </section>
@@ -163,9 +166,9 @@
     <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="publications">
         <div class="container px-5">
             <header>
-                <h2 id="publications-subtitle"><i class="bi bi-file-text-fill"></i>&nbsp;PUBLICATIONS</h2>
+                <h2 id="publications-subtitle"><i class="bi bi-file-text-fill"></i>&nbsp;TECHNICAL SKILLS</h2>
             </header>
-            <div class="main-body" id="publications-md"></div>
+            <div class="main-body" id="technical skills-md"></div>
 
         </div>
     </section>
