--- a/index.html
+++ b/index.html
@@ -163,10 +163,10 @@
     <!-- Awards -->
 
     <!-- Technical Skills -->
-    <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="publications">
+    <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="technical skills">
         <div class="container px-5">
             <header>
-                <h2 id="publications-subtitle"><i class="bi bi-file-text-fill"></i>&nbsp;TECHNICAL SKILLS</h2>
+                <h2 id="technical skills-subtitle"><i class="bi bi-bookmark-check-fill"></i>&nbsp;TECHNICAL SKILLS</h2>
             </header>
             <div class="main-body" id="technical skills-md"></div>
 
