--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         <a class="nav-link me-lg-3" href="#awards">AWARDS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#awards">TECHNICAL SKILLS</a>
+                        <a class="nav-link me-lg-3" href="#technical skills">TECHNICAL SKILLS</a>
                     </li>
 
                 </ul>
