--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         <a class="nav-link me-lg-3" href="#awards">AWARDS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#awards">TECHNICAL SKILLS</a>
+                        <a class="nav-link me-lg-3" href="#technicalskills">TECHNICAL SKILLS</a>
                     </li>
 
                 </ul>
@@ -163,7 +163,7 @@
     <!-- Awards -->
 
     <!-- Technical Skills -->
-    <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="technical skills">
+    <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="technicalskills">
         <div class="container px-5">
             <header>
                 <h2 id="technical skills-subtitle"><i class="bi bi-bookmark-check-fill"></i>&nbsp;TECHNICAL SKILLS</h2>
