--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
                     <li class="nav-item">
                         <a class="nav-link me-lg-3" href="#technicalskills">TECHNICAL SKILLS</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link me-lg-3" href="#languageproficiency">LANGUAGE PROFICIENCY</a>
+                    </li>
 
                 </ul>
             </div>
@@ -166,7 +169,7 @@
     <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="technicalskills">
         <div class="container px-5">
             <header>
-                <h2 id="technical skills-subtitle"><i class="bi bi-bookmark-check-fill"></i>&nbsp;TECHNICAL SKILLS</h2>
+                <h2 id="technical skills-subtitle"><i class="bi bi-bookmark-check-fill"></i>&nbsp;TECHNICAL SKILLS </h2>
             </header>
             <div class="main-body" id="technical skills-md"></div>
 
@@ -174,6 +177,17 @@
     </section>
     <!-- Technical Skills -->
 
+    <!-- Language Proficiency -->
+    <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="languageproficiency">
+        <div class="container px-5">
+            <header>
+                <h2 id="language proficiency-subtitle"><i class="bi bi-chat-text-fill"></i>LANGUAGE PROFICIENCY </h2>
+            </header>
+            <div class="main-body" id="language proficiency-md"></div>
+
+        </div>
+    </section>
+    <!-- Language Proficiency -->
 
     <!-- Footer-->
     <footer class="bg-bottom text-center py-5">
