--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="languageproficiency">
         <div class="container px-5">
             <header>
-                <h2 id="language proficiency-subtitle"><i class="bi bi-chat-text-fill"></i>LANGUAGE PROFICIENCY </h2>
+                <h2 id="language proficiency-subtitle"><i class="bi bi-chat-text-fill"></i>&nbsp;LANGUAGE PROFICIENCY </h2>
             </header>
             <div class="main-body" id="language proficiency-md"></div>
 
